--- a/MarvelApp/MarvelApp/Forgot The Password/ForgotPassword.storyboard
+++ b/MarvelApp/MarvelApp/Forgot The Password/ForgotPassword.storyboard
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina5_9" orientation="portrait" appearance="light"/>
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Forgot PasswordVC-->
         <scene sceneID="4ll-3i-6Q1">
             <objects>
-                <viewController storyboardIdentifier="ForgotPassword" modalPresentationStyle="fullScreen" id="EyL-Tp-9Wy" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ForgotPassword" modalPresentationStyle="fullScreen" id="EyL-Tp-9Wy" customClass="ForgotPasswordVC" customModule="MarvelApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="r3A-mG-FqV">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="LoginScreen-1" translatesAutoresizingMaskIntoConstraints="NO" id="Y7C-gQ-M47">
@@ -23,7 +23,7 @@
                                 <edgeInsets key="layoutMargins" top="-142" left="695" bottom="1015" right="-59"/>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="23" translatesAutoresizingMaskIntoConstraints="NO" id="n3g-Zg-WSc">
-                                <rect key="frame" x="71" y="303" width="233" height="226"/>
+                                <rect key="frame" x="71" y="259" width="233" height="226"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" text="CPF" borderStyle="roundedRect" adjustsFontSizeToFit="NO" minimumFontSize="16" translatesAutoresizingMaskIntoConstraints="NO" id="m7o-S6-O8g">
                                         <rect key="frame" x="0.0" y="0.0" width="233" height="60"/>
@@ -58,7 +58,7 @@
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dMi-yB-YcF">
-                                <rect key="frame" x="71" y="625" width="233" height="50"/>
+                                <rect key="frame" x="71" y="514" width="233" height="50"/>
                                 <color key="backgroundColor" red="0.011764705882352941" green="0.074509803921568626" blue="0.12156862745098039" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="Ksy-E8-Adv"/>
@@ -69,13 +69,13 @@
                                 </state>
                             </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LogoMarvel" translatesAutoresizingMaskIntoConstraints="NO" id="JV6-vS-tJR">
-                                <rect key="frame" x="107" y="94" width="158" height="140"/>
+                                <rect key="frame" x="107" y="50" width="158" height="140"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="140" id="VM3-VW-eVN"/>
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nye-G7-Stt">
-                                <rect key="frame" x="149" y="705" width="78" height="23"/>
+                                <rect key="frame" x="149" y="594" width="78" height="23"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="23" id="rDm-Bu-Bes"/>
                                 </constraints>
@@ -85,7 +85,7 @@
                                 </state>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Reset Password" textAlignment="center" lineBreakMode="clip" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8xY-qz-cl3">
-                                <rect key="frame" x="107" y="263" width="158" height="20"/>
+                                <rect key="frame" x="107" y="219" width="158" height="20"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="20" id="wse-mb-wzt"/>
                                 </constraints>
@@ -123,6 +123,6 @@
     </scenes>
     <resources>
         <image name="LoginScreen-1" width="231.66667175292969" height="338.33334350585938"/>
-        <image name="LogoMarvel" width="65.666664123535156" height="46.666667938232422"/>
+        <image name="LogoMarvel" width="66" height="47"/>
     </resources>
 </document>
