--- a/MarvelApp/MarvelApp/Forgot The Password/ForgotPassword.storyboard
+++ b/MarvelApp/MarvelApp/Forgot The Password/ForgotPassword.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait" appearance="light"/>
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -12,7 +12,7 @@
             <objects>
                 <viewController storyboardIdentifier="ForgotPassword" modalPresentationStyle="fullScreen" id="EyL-Tp-9Wy" customClass="ForgotPasswordVC" customModule="MarvelApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="r3A-mG-FqV">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="LoginScreen-1" translatesAutoresizingMaskIntoConstraints="NO" id="Y7C-gQ-M47">
@@ -23,10 +23,10 @@
                                 <edgeInsets key="layoutMargins" top="-142" left="695" bottom="1015" right="-59"/>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="23" translatesAutoresizingMaskIntoConstraints="NO" id="n3g-Zg-WSc">
-                                <rect key="frame" x="71" y="259" width="233" height="226"/>
+                                <rect key="frame" x="71" y="303" width="272" height="226"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" text="CPF" borderStyle="roundedRect" adjustsFontSizeToFit="NO" minimumFontSize="16" translatesAutoresizingMaskIntoConstraints="NO" id="m7o-S6-O8g">
-                                        <rect key="frame" x="0.0" y="0.0" width="233" height="60"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="272" height="60"/>
                                         <color key="backgroundColor" red="0.74509803919999995" green="0.74509803919999995" blue="0.74509803919999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="60" id="0Ce-FX-uUu"/>
@@ -36,7 +36,7 @@
                                         <textInputTraits key="textInputTraits" keyboardType="decimalPad" enablesReturnKeyAutomatically="YES"/>
                                     </textField>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" text="Password" borderStyle="roundedRect" adjustsFontSizeToFit="NO" minimumFontSize="16" translatesAutoresizingMaskIntoConstraints="NO" id="UFg-lw-JgR">
-                                        <rect key="frame" x="0.0" y="83" width="233" height="60"/>
+                                        <rect key="frame" x="0.0" y="83" width="272" height="60"/>
                                         <color key="backgroundColor" red="0.74509803919999995" green="0.74509803919999995" blue="0.74509803919999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="60" id="Ats-l5-ESA"/>
@@ -46,7 +46,7 @@
                                         <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES"/>
                                     </textField>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" text="Confirm Password" borderStyle="roundedRect" adjustsFontSizeToFit="NO" minimumFontSize="16" translatesAutoresizingMaskIntoConstraints="NO" id="V2t-Bk-APA">
-                                        <rect key="frame" x="0.0" y="166" width="233" height="60"/>
+                                        <rect key="frame" x="0.0" y="166" width="272" height="60"/>
                                         <color key="backgroundColor" red="0.74509803919999995" green="0.74509803919999995" blue="0.74509803919999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="60" id="wBM-yH-JNL"/>
@@ -58,7 +58,7 @@
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dMi-yB-YcF">
-                                <rect key="frame" x="71" y="514" width="233" height="50"/>
+                                <rect key="frame" x="71" y="709" width="272" height="50"/>
                                 <color key="backgroundColor" red="0.011764705882352941" green="0.074509803921568626" blue="0.12156862745098039" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="Ksy-E8-Adv"/>
@@ -67,15 +67,18 @@
                                 <state key="normal" title="UPDATE">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <connections>
+                                    <action selector="tappedUpdateButton:" destination="EyL-Tp-9Wy" eventType="touchUpInside" id="amS-nm-h8D"/>
+                                </connections>
                             </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LogoMarvel" translatesAutoresizingMaskIntoConstraints="NO" id="JV6-vS-tJR">
-                                <rect key="frame" x="107" y="50" width="158" height="140"/>
+                                <rect key="frame" x="107" y="94" width="197" height="140"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="140" id="VM3-VW-eVN"/>
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nye-G7-Stt">
-                                <rect key="frame" x="149" y="594" width="78" height="23"/>
+                                <rect key="frame" x="149" y="789" width="117" height="23"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="23" id="rDm-Bu-Bes"/>
                                 </constraints>
@@ -83,9 +86,12 @@
                                 <state key="normal" title="LOGIN">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <connections>
+                                    <action selector="tappedLoginButton:" destination="EyL-Tp-9Wy" eventType="touchUpInside" id="fGR-Bx-iJ6"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Reset Password" textAlignment="center" lineBreakMode="clip" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8xY-qz-cl3">
-                                <rect key="frame" x="107" y="219" width="158" height="20"/>
+                                <rect key="frame" x="107" y="263" width="197" height="20"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="20" id="wse-mb-wzt"/>
                                 </constraints>
@@ -115,6 +121,13 @@
                             <constraint firstItem="dMi-yB-YcF" firstAttribute="leading" secondItem="kDH-aJ-4ZD" secondAttribute="leading" constant="71" id="rsK-3q-pFy"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="confirmPasswordTextField" destination="V2t-Bk-APA" id="kOT-No-NYo"/>
+                        <outlet property="cpfTextField" destination="m7o-S6-O8g" id="0ec-8H-j4a"/>
+                        <outlet property="loginButton" destination="Nye-G7-Stt" id="J4c-cx-LTV"/>
+                        <outlet property="passwordTextField" destination="UFg-lw-JgR" id="AU2-A1-npR"/>
+                        <outlet property="updateButton" destination="dMi-yB-YcF" id="0Qv-2s-Tcz"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CjZ-bx-ST4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
