--- a/MarvelApp/MarvelApp/Profile/Profile.storyboard
+++ b/MarvelApp/MarvelApp/Profile/Profile.storyboard
@@ -1,28 +1,112 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina5_9" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
+        <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Profile-->
+        <!--View Controller-->
         <scene sceneID="GpD-tD-wSr">
             <objects>
                 <viewController storyboardIdentifier="ProfileVC" id="ggd-AK-drP" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="2Wy-QR-Vhg">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5O6-hq-rJq">
+                                <rect key="frame" x="52" y="61.000000000000007" width="148" height="68.666666666666686"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Favorited" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gJE-19-gdm">
+                                        <rect key="frame" x="0.0" y="50" width="73.333333333333329" height="18.666666666666671"/>
+                                        <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="16"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="@stanlee" textAlignment="natural" lineBreakMode="clip" baselineAdjustment="alignBaselines" minimumFontSize="12" preferredMaxLayoutWidth="100" translatesAutoresizingMaskIntoConstraints="NO" id="7MN-zW-EHX">
+                                        <rect key="frame" x="0.0" y="0.0" width="148" height="50"/>
+                                        <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="24"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="heart.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="hZ9-Uc-0yl">
+                                        <rect key="frame" x="73" y="49.666666666666629" width="16.333333333333329" height="19"/>
+                                        <color key="tintColor" systemColor="systemRedColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="26" id="Bbq-QD-Mlf"/>
+                                        </constraints>
+                                        <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="small" weight="ultraLight"/>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="gJE-19-gdm" firstAttribute="top" secondItem="7MN-zW-EHX" secondAttribute="bottom" id="C7e-Wk-kS1"/>
+                                    <constraint firstItem="gJE-19-gdm" firstAttribute="top" secondItem="7MN-zW-EHX" secondAttribute="bottom" id="Fsh-zb-QEV"/>
+                                    <constraint firstItem="gJE-19-gdm" firstAttribute="leading" secondItem="5O6-hq-rJq" secondAttribute="leading" id="HZX-XQ-eHj"/>
+                                    <constraint firstItem="hZ9-Uc-0yl" firstAttribute="top" secondItem="5O6-hq-rJq" secondAttribute="top" constant="46.329999999999998" id="Sfb-2B-wn4"/>
+                                    <constraint firstItem="7MN-zW-EHX" firstAttribute="leading" secondItem="5O6-hq-rJq" secondAttribute="leading" id="Ww1-c7-M0l"/>
+                                    <constraint firstAttribute="bottom" secondItem="hZ9-Uc-0yl" secondAttribute="bottom" constant="-3.6699999999999999" id="WwZ-uw-JfU"/>
+                                    <constraint firstItem="hZ9-Uc-0yl" firstAttribute="leading" secondItem="gJE-19-gdm" secondAttribute="trailing" constant="1.6699999999999999" id="itl-uN-jFX"/>
+                                    <constraint firstAttribute="bottom" secondItem="gJE-19-gdm" secondAttribute="bottom" id="nZD-Wh-sCV"/>
+                                    <constraint firstItem="7MN-zW-EHX" firstAttribute="top" secondItem="5O6-hq-rJq" secondAttribute="top" id="vNr-cL-XdS"/>
+                                    <constraint firstItem="hZ9-Uc-0yl" firstAttribute="centerY" secondItem="gJE-19-gdm" secondAttribute="centerY" id="vh5-eX-N40"/>
+                                    <constraint firstAttribute="trailing" secondItem="7MN-zW-EHX" secondAttribute="trailing" id="zgk-Rq-3dV"/>
+                                </constraints>
+                            </view>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="hmN-ko-WU8">
+                                <rect key="frame" x="52" y="170.66666666666666" width="271" height="45"/>
+                                <color key="backgroundColor" red="0.062745098039215685" green="0.062745098039215685" blue="0.062745098039215685" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="Lcy-2B-2V5"/>
+                                </constraints>
+                                <segments>
+                                    <segment title="Characters"/>
+                                    <segment title="Comics"/>
+                                </segments>
+                                <color key="tintColor" red="0.99019607840000001" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="selectedSegmentTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </segmentedControl>
+                            <button opaque="NO" contentMode="right" contentHorizontalAlignment="right" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qRu-Yr-qHJ">
+                                <rect key="frame" x="293" y="73" width="30" height="26"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="26" id="A9l-fU-RBm"/>
+                                    <constraint firstAttribute="width" constant="30" id="KpE-i1-f85"/>
+                                </constraints>
+                                <state key="normal" title="Button">
+                                    <imageReference key="image" image="gearshape.fill" catalog="system" symbolScale="large" renderingMode="original"/>
+                                </state>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="gKn-59-HnG"/>
-                        <color key="backgroundColor" systemColor="systemYellowColor"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="hmN-ko-WU8" firstAttribute="trailing" secondItem="qRu-Yr-qHJ" secondAttribute="trailing" id="4nA-1j-Rci"/>
+                            <constraint firstItem="hmN-ko-WU8" firstAttribute="top" secondItem="5O6-hq-rJq" secondAttribute="bottom" constant="41" id="Ecr-RO-n2F"/>
+                            <constraint firstItem="5O6-hq-rJq" firstAttribute="top" secondItem="gKn-59-HnG" secondAttribute="top" constant="17" id="JS9-qP-bAB"/>
+                            <constraint firstItem="gKn-59-HnG" firstAttribute="trailing" secondItem="hmN-ko-WU8" secondAttribute="trailing" constant="52" id="XnP-t3-4Wd"/>
+                            <constraint firstItem="hmN-ko-WU8" firstAttribute="leading" secondItem="7MN-zW-EHX" secondAttribute="leading" id="bqc-50-aVR"/>
+                            <constraint firstItem="5O6-hq-rJq" firstAttribute="leading" secondItem="gKn-59-HnG" secondAttribute="leading" constant="52" id="edk-lN-Tsb"/>
+                            <constraint firstItem="qRu-Yr-qHJ" firstAttribute="centerY" secondItem="7MN-zW-EHX" secondAttribute="centerY" id="hUd-hA-S97"/>
+                            <constraint firstItem="qRu-Yr-qHJ" firstAttribute="top" secondItem="gKn-59-HnG" secondAttribute="top" constant="29" id="m6r-pX-65u"/>
+                            <constraint firstItem="hmN-ko-WU8" firstAttribute="leading" secondItem="gKn-59-HnG" secondAttribute="leading" constant="52" id="u5S-Z2-3cd"/>
+                            <constraint firstItem="qRu-Yr-qHJ" firstAttribute="leading" secondItem="5O6-hq-rJq" secondAttribute="trailing" constant="93" id="uty-S2-bV1"/>
+                        </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Profile" id="CGd-Or-vyz"/>
+                    <tabBarItem key="tabBarItem" title="" id="CGd-Or-vyz">
+                        <imageReference key="image" image="person.fill" catalog="system" symbolScale="large" renderingMode="original"/>
+                        <imageReference key="landscapeImage" image="person.fill" catalog="system" symbolScale="large" renderingMode="original"/>
+                        <imageReference key="largeContentSizeImage" image="person.fill" catalog="system" symbolScale="large" renderingMode="original"/>
+                        <inset key="largeContentSizeImageInsets" minX="-1" minY="1" maxX="0.0" maxY="0.0"/>
+                        <imageReference key="selectedImage" image="person.fill" catalog="system" symbolScale="large" renderingMode="original"/>
+                        <offsetWrapper key="titlePositionAdjustment" horizontal="0.0" vertical="0.0"/>
+                    </tabBarItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qU2-00-vJI" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1001.4492753623189" y="12.723214285714285"/>
+            <point key="canvasLocation" x="997.60000000000002" y="10.344827586206897"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="1Tp-Dl-dRN">
@@ -30,6 +114,7 @@
                 <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="lac-Qa-Pw6" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="QS5-MZ-1RU">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
@@ -43,8 +128,14 @@
         </scene>
     </scenes>
     <resources>
-        <systemColor name="systemYellowColor">
-            <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <image name="gearshape.fill" catalog="system" width="128" height="121"/>
+        <image name="heart.fill" catalog="system" width="128" height="109"/>
+        <image name="person.fill" catalog="system" width="128" height="120"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
